--- a/background.html
+++ b/background.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     	<script src="js/jquery-2.2.1.min.js"></script>
-		<script src="js/bundle.js"></script>
+		<script src="js/qsocks.bundle.js"></script>
 		<script src="tw_init.js"></script>
     </head>
 </html>
